# smart-farm

./: .clang-format  .clang-format.save  .gitignore  .gitmodules  AGENTS.MD  AGENTS.md  ANALYSIS.md  CMakeLists.txt  COMPONENT_MANAGEMENT_STRATEGY.md  FIX_COMPONENT_COLLISIONS.md  README.md  REFACTORING_PLAN.md  agent_environment_script  folder-estruct.txt  sdkconfig  sdkconfig.old  smart-farm.code-workspace  smart-farm.code-workspace.bak
app_central_hub/: .clangd  CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
app_central_hub/main/: CMakeLists.txt  central_hub_app.cpp  main.cpp
app_ota/: CMakeLists.txt
app_ota/main/: CMakeLists.txt  main.cpp
app_ota_sender/: CMakeLists.txt  Kconfig.projbuild  sdkconfig.defaults
app_ota_sender/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  ota_sender_app.cpp
app_ota_sender/main/include/: ota_sender_app.hpp
app_slave/: .clangd  CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32
app_slave/main/: CMakeLists.txt  app_slave.cpp  main.cpp
app_test/: .clangd  CMakeLists.txt
app_test/main/: CMakeLists.txt  idf_component.yml  main.cpp  test_app.cpp
app_test/main/include/: test_app.hpp
app_water_tank/: .clangd  CMakeLists.txt  REFACTORING_GEOMETRY_LOGIC.md  REFACTORING_GEOMETRY_LOGIC_PLAN.md  build_log.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c3
app_water_tank/main/: CMakeLists.txt  idf_component.yml  main.cpp  main.cpp.bak  water_tank_app.cpp  water_tank_app.cpp.bak  water_tank_nvs.cpp  water_tank_nvs.cpp.bak
app_water_tank/main/include/: float_switch_adapter.hpp  tank_geometry.hpp  ultrasonic_adapter.hpp  water_tank_app.hpp  water_tank_logic.hpp  water_tank_nvs.hpp  water_tank_stats.hpp  water_tank_storage_adapter.hpp  water_tank_types.hpp
app_water_tank/main/include/interfaces/: i_float_switch.hpp  i_level_sensor.hpp
app_water_tank/main/src/: tank_geometry.cpp  water_tank_app.cpp  water_tank_logic.cpp  water_tank_nvs.cpp
apps/central_hub/: CMakeLists.txt
apps/water_tank/main/: CMakeLists.txt  WaterTankApp.cpp  WaterTankNvs.cpp  main.cpp  water_tank_app.cpp  water_tank_nvs.cpp
apps/water_tank/main/include/: WaterTankApp.hpp  WaterTankNvs.hpp  WaterTankStats.hpp  WaterTankTypes.hpp  config.hpp  water_tank_app.hpp  water_tank_nvs.hpp  water_tank_stats.hpp
components/: submodules.md
components/comm/: CMakeLists.txt  comm_interface.cpp
components/comm_espnow/: CMakeLists.txt  comm_espnow.cpp
components/comm_peer_manager/: CMakeLists.txt  comm_peer_manager.c  comm_peer_manager.cpp
components/comm_protocol/: CMakeLists.txt  protocol_codec.cpp  protocol_frame.cpp
components/common/: CMakeLists.txt
components/common_types/: CMakeLists.txt  common_types.cpp  common_types.hpp
components/core/: CMakeLists.txt  NvsCore.cpp  nvs_core.cpp
components/espnow/: CMakeLists.txt  espnow.cpp  espnow_storage.cpp  readme.md
components/espnow/include/: espnow.hpp  espnow_storage.hpp
components/espnow/test/: CMakeLists.txt  test_espnow_storage.cpp  test_memory_helper.hpp
components/espnow_comm/: CMakeLists.txt  acknowledgment_manager.cpp  espnow_comm.cpp  persistence.cpp
components/espnow_comm/include/: acknowledgment_manager.hpp  espnow_comm.hpp  espnow_comm_queue_types.hpp  message_types.hpp  persistence.hpp
components/gpio_validator/: CMakeLists.txt  gpio_validator.cpp
components/gpio_validator/host_test/main/: CMakeLists.txt  test_gpio_validator_host.cpp
components/gpio_validator/test/main/: CMakeLists.txt  gpio_validator_test.cpp  test_gpio_validator.cpp
components/nvs_core/: nvs_core.cpp
components/ota_manager/: BUILD_WARNINGS.md  CMakeLists.txt  README.md  REFACTOR_PLAN.md  ota_manager.cpp
components/ota_manager/include/: http_client.hpp  manifest_parser.hpp  ota_events.hpp  ota_manager.hpp  ota_session.hpp  ota_types.hpp  rollback_manager.hpp  system.hpp  task_scheduler.hpp  version_helper.hpp
components/ota_manager/include/interfaces/: i_http_client.hpp  i_manifest_parser.hpp  i_ota_manager.hpp  i_ota_session.hpp  i_rollback_manager.hpp  i_system.hpp  i_task_scheduler.hpp
components/ota_manager/src/: http_client.cpp  manifest_parser.cpp  ota_manager.cpp  ota_session.cpp  rollback_manager.cpp
components/power_control/: CMakeLists.txt  PowerControl.cpp  gpio_validator.cpp  power_control.cpp
components/sensor_floatswitch/: CMakeLists.txt  FloatSwitch.cpp  float_switch.cpp  readme.md
components/sensor_floatswitch/test/main/: CMakeLists.txt
components/sensor_ultrasonic/: CMakeLists.txt  HCSR04.cpp  HCSR04Gpio.cpp  HCSR04Rmt.cpp  UltrasonicSensor.cpp  trig_echo.cpp  trig_echo_gpio.cpp  trig_echo_rmt.cpp  ultrasonic_sensor.cpp
components/sensor_ultrasonic/test/main/: CMakeLists.txt  main.c  test_sensor_ultrasonic.cpp
components/sensors/: CMakeLists.txt  WaterLevelSensor.cpp
components/test_utils/: CMakeLists.txt
components/to_do/: check_nvs_init.txt  ota_cheack_startup.txt
components/wifi_manager/: API.md  CMakeLists.txt  README.md  wifi_manager.cpp
components/wifi_manager/host_test/: CMakeLists.txt
components/wifi_manager/include/: wifi_manager.hpp
components/wifi_manager/test/: CMakeLists.txt  sdkconfig.defaults.esp32s3
components/wifi_manager/test/main/: CMakeLists.txt  main.c  test_state_helpers.cpp  test_state_helpers.hpp  test_wifi_manager.cpp  test_wifi_manager_accessor.hpp  test_wifi_manager_internal.cpp
host_test/common/: mock_esp_https_ota.h  mock_hal_nvs.hpp  mock_i_http_client.hpp  mock_i_manifest_parser.hpp  mock_i_ota_session.hpp  mock_i_rollback_manager.hpp  mock_i_system.hpp  mock_i_task_scheduler.hpp
host_test/test_nvs_core/: CMakeLists.txt
host_test/test_water_tank/main/: CMakeLists.txt  test_water_tank.cpp
smart-farm-hub/: .gitmodules  CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.esp32s3
smart-farm-hub/components/: ota_manager  (+3 more)
study_docs/: HOST_TESTING_GUIDE.md  WIFI_MANAGER_HOST_TEST.md  WOKWI_TESTING_GUIDE.md  WOKWI_WIFI_SIMULATION.md
unit-test-app/: CMakeLists.txt  sdkconfig.defaults  sdkconfig.defaults.esp32c3  sdkconfig.defaults.esp32s3
(+78 files in other folders)
