idf_component_register(
    SRCS
        "src/ota_manager.cpp"
        "src/manifest_parser.cpp"
        "src/http_client.cpp"
        "src/ota_session.cpp"
        "src/rollback_manager.cpp"
    INCLUDE_DIRS
        "include"
    REQUIRES
        esp_https_ota
    PRIV_REQUIRES
        app_update
        json
)
